feat: docker、pm2

--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "license": "MIT",
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
+    "build:docker": "docker build -t $npm_package_name:$npm_package_version .",
+    "build:protocol": "node protocol.js",
+    "startup": "pm2 start startup.json --env production",
+    "stop": "pm2 stop startup.json --env production",
+    "restart": "pm2 restart startup.json --env production",
+    "startup:docker": "pm2-docker start startup.json --env production",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
     "dev": "tsc-watch -p tsconfig.build.json --onSuccess \"node dist/main.js\"",
@@ -31,6 +37,7 @@
     "dotenv": "^8.2.0",
     "helmet": "^3.21.2",
     "module-alias": "^2.2.2",
+    "pm2": "^4.2.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
