feat: 模板新增功能:日志优化,及爱他功能修正

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,12 @@
 {
   "parser": "@typescript-eslint/parser",
   "extends": [
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:security/recommended"
   ],
   "plugins": [
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "security"
   ],
   "env": {
     "browser": true,
@@ -18,6 +20,7 @@
         "prefixWithI": "always"
       }
     ],
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "security/detect-object-injection": "off"
   }
 }
