--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
     "swagger-ui-express": "^4.1.2",
+    "uuid": "^3.3.3",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.3.0"
   },
@@ -52,9 +53,12 @@
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
     "@types/supertest": "2.0.7",
+    "@types/uuid": "^3.4.6",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "eslint": "^6.7.2",
+    "eslint-plugin-security": "^1.4.0",
+    "husky": "^3.1.0",
     "jest": "24.7.1",
     "prettier": "1.17.0",
     "supertest": "4.0.2",
@@ -77,5 +81,10 @@
     },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
