feat: 增加模板字段

--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "nest-template",
+  "name": "<%= name %>",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "license": "MIT",
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
-    "build:docker": "docker build -t $npm_package_name:$npm_package_version .",
     "build:protocol": "node protocol.js",
+    "build:docker": "docker build -t $npm_package_name:$npm_package_version .",
+    "startup:docker": "pm2-docker start startup.json --env production",
     "startup": "pm2 start startup.json --env production",
     "stop": "pm2 stop startup.json --env production",
     "restart": "pm2 restart startup.json --env production",
-    "startup:docker": "pm2-docker start startup.json --env production",
     "format": "prettier --write \"src/**/*.ts\"",
-    "start": "ts-node -r tsconfig-paths/register src/main.ts",
     "dev": "tsc-watch -p tsconfig.build.json --onSuccess \"node dist/main.js\"",
     "start:debug": "tsc-watch -p tsconfig.build.json --onSuccess \"node --inspect-brk dist/main.js\"",
-    "start:prod": "node dist/main.js",
     "lint": "eslint \"src/**\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
