--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "eslint-plugin-security": "^1.4.0",
     "husky": "^3.1.0",
     "jest": "24.7.1",
+    "ora": "^4.0.3",
     "prettier": "1.17.0",
+    "protobufjs": "^6.8.8",
     "supertest": "4.0.2",
     "ts-jest": "24.0.2",
     "ts-node": "8.1.0",
