feat: nest版本升级到7.0，增加测试用例

--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "<%= name %>",
+  "name": "nest-template",
   "version": "0.0.1",
   "description": "",
   "author": "",
-  "license": "MIT",
+  "private": true,
+  "license": "UNLICENSED",
   "scripts": {
-    "build": "rimraf dist && tsc -p tsconfig.build.json",
+    "prebuild": "rimraf dist",
+    "build": "nest build",
     "build:protocol": "node protocol.js",
     "build:docker": "docker build -t $npm_package_name:$npm_package_version .",
     "startup:docker": "pm2-docker start startup.json --env production",
+    "dev": "nest start --watch",
+    "debug": "nest start --debug --watch",
     "startup": "pm2 start startup.json --env production",
     "stop": "pm2 stop startup.json --env production",
     "restart": "pm2 restart startup.json --env production",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "dev": "tsc-watch -p tsconfig.build.json --onSuccess \"node dist/main.js\"",
-    "start:debug": "tsc-watch -p tsconfig.build.json --onSuccess \"node --inspect-brk dist/main.js\"",
-    "lint": "eslint \"src/**\" --fix",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -23,50 +25,56 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^6.0.0",
-    "@nestjs/core": "^6.0.0",
-    "@nestjs/microservices": "^6.10.5",
-    "@nestjs/platform-express": "^6.0.0",
-    "@nestjs/swagger": "^3.1.0",
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/microservices": "^7.0.7",
+    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/swagger": "^4.5.1",
     "class-transformer": "^0.2.3",
-    "class-validator": "^0.11.0",
-    "cookie-parser": "^1.4.4",
-    "dayjs": "^1.8.17",
+    "class-validator": "^0.11.1",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
+    "dayjs": "^1.8.23",
     "dotenv": "^8.2.0",
-    "helmet": "^3.21.2",
+    "helmet": "^3.22.0",
     "module-alias": "^2.2.2",
-    "pm2": "^4.2.0",
-    "reflect-metadata": "^0.1.12",
-    "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3",
-    "swagger-ui-express": "^4.1.2",
-    "uuid": "^3.3.3",
+    "pm2": "^4.2.3",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.4",
+    "uuid": "^7.0.3",
     "winston": "^3.2.1",
-    "winston-daily-rotate-file": "^4.3.0"
+    "winston-daily-rotate-file": "^4.4.2"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.0.0",
+    "@nestjs/cli": "^7.0.0",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
+    "@types/csurf": "^1.9.36",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "4.16.1",
-    "@types/jest": "24.0.11",
-    "@types/node": "11.13.4",
-    "@types/supertest": "2.0.7",
-    "@types/uuid": "^3.4.6",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
-    "eslint": "^6.7.2",
+    "@types/express": "^4.17.3",
+    "@types/jest": "25.1.4",
+    "@types/node": "^10.17.0",
+    "@types/supertest": "^2.0.8",
+    "@types/uuid": "^7.0.2",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-security": "^1.4.0",
-    "husky": "^3.1.0",
-    "jest": "24.7.1",
+    "husky": "^4.2.3",
+    "jest": "^25.1.0",
     "ora": "^4.0.3",
-    "prettier": "1.17.0",
-    "protobufjs": "^6.8.8",
-    "supertest": "4.0.2",
-    "ts-jest": "24.0.2",
-    "ts-node": "8.1.0",
-    "tsc-watch": "2.2.1",
-    "tsconfig-paths": "3.8.0",
-    "typescript": "3.4.3"
+    "prettier": "^1.19.1",
+    "protobufjs": "^6.8.9",
+    "supertest": "^4.0.2",
+    "ts-jest": "25.2.1",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.6.2",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -74,12 +82,28 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "moduleNameMapper": {
+      "^@Src/(.*)": "<rootDir>/src/$1",
+      "^@App/(.*)": "<rootDir>/src/app/$1",
+      "^@Helper/(.*)": "<rootDir>/src/helper/$1",
+      "^@Common/(.*)": "<rootDir>/src/common/$1",
+      "^@Protocol/(.*)": "<rootDir>/protocol/$1",
+      "^@Resource/(.*)": "<rootDir>/resource/$1",
+      "^@Log/(.*)": "<rootDir>/src/common/module/log/$1",
+      "^@Config/(.*)": "<rootDir>/src/common/module/config/$1"
+    },
+    "testTimeout": 30000,
+    "rootDir": "./",
     "testRegex": ".spec.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "coverageDirectory": "../coverage",
+    "coverageDirectory": "./coverage",
     "testEnvironment": "node"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
