--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,9 @@
       }
     ],
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error"
+    ],
     "security/detect-object-injection": "off"
   }
 }
