--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-unused-imports": "^0.1.2",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
     "ora": "^4.0.3",
