--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/microservices": "^7.0.7",
-    "@nestjs/platform-express": "^7.0.0",
-    "@nestjs/swagger": "^4.5.1",
+    "@nestjs/common": "^7.0.9",
+    "@nestjs/core": "^7.0.9",
+    "@nestjs/microservices": "^7.0.9",
+    "@nestjs/platform-express": "^7.0.9",
+    "@nestjs/swagger": "^4.5.5",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
     "cookie-parser": "^1.4.5",
@@ -40,7 +40,6 @@
     "module-alias": "^2.2.2",
     "pm2": "^4.2.3",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "swagger-ui-express": "^4.1.4",
     "uuid": "^7.0.3",
@@ -58,8 +57,10 @@
     "@types/node": "^10.17.0",
     "@types/supertest": "^2.0.8",
     "@types/uuid": "^7.0.2",
+    "@types/v8-profiler": "0.0.6",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
+    "easy-monitor": "^2.2.8",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
@@ -70,6 +71,7 @@
     "ora": "^4.0.3",
     "prettier": "^1.19.1",
     "protobufjs": "^6.8.9",
+    "rimraf": "^3.0.2",
     "supertest": "^4.0.2",
     "ts-jest": "25.2.1",
     "ts-loader": "^6.2.1",
