--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "build:protocol": "node protocol.js",
+    "build:protocol": "rxjs-grpc -o src/proto.ts proto/**/*.proto",
     "build:docker": "docker build -t $npm_package_name:$npm_package_version .",
     "startup:docker": "pm2-docker start startup.json --env production",
     "dev": "nest start --watch",
@@ -22,9 +22,11 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "server:example": "ts-node example/grpc-server/src/main.ts"
   },
   "dependencies": {
+    "@grpc/proto-loader": "^0.5.4",
     "@nestjs/common": "^7.0.9",
     "@nestjs/core": "^7.0.9",
     "@nestjs/microservices": "^7.0.9",
@@ -36,9 +38,10 @@
     "csurf": "^1.11.0",
     "dayjs": "^1.8.23",
     "dotenv": "^8.2.0",
+    "grpc": "^1.24.2",
     "helmet": "^3.22.0",
     "module-alias": "^2.2.2",
-    "pm2": "^4.2.3",
+    "pm2": "^4.4.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
     "swagger-ui-express": "^4.1.4",
@@ -56,28 +59,32 @@
     "@types/jest": "25.1.4",
     "@types/node": "^10.17.0",
     "@types/supertest": "^2.0.8",
-    "@types/uuid": "^7.0.2",
-    "@types/v8-profiler": "0.0.6",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
-    "easy-monitor": "^2.2.8",
-    "eslint": "^6.8.0",
+    "@types/uuid": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
+    "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-unused-imports": "^0.1.2",
     "husky": "^4.2.3",
-    "jest": "^25.1.0",
+    "jest": "^26.0.1",
     "ora": "^4.0.3",
     "prettier": "^1.19.1",
-    "protobufjs": "^6.8.9",
     "rimraf": "^3.0.2",
+    "rxjs-grpc": "^0.2.5",
     "supertest": "^4.0.2",
-    "ts-jest": "25.2.1",
+    "ts-jest": "^26.1.0",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.7.4"
+  },
+  "optionalDependencies": {
+    "easy-monitor": "^2.2.8"
+  },
+  "engines": {
+    "node": ">=10.0.0 <13.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
