feat: 更新proto构建方式

--- a/.eslintignore
+++ b/.eslintignore
@@ -8,6 +8,6 @@
 
 protocol.js
 /**/*.js
-src/proto.ts
 src/proto.d.ts
-example/grpc-server/proto.ts
+src/proto.d.ts
+example/grpc-server/src/proto.d.ts
